# gr-my_lte

./: CMakeLists.txt  README.md  README.md~
apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ch_src/: Makefile  ch_src  dci  main.cpp
docs/: CTestTestfile.cmake  Makefile  README.my_lte  cmake_install.cmake
grc/: CMakeLists.txt  CTestTestfile.cmake  Makefile  PCFICH.grc  PDCCH.grc  PHICH_3_group.grc  PHICH_coding.grc  PHICH_group.grc  bch.grc  bch_dsch_tst.grc  bch_tst.grc  cmake_install.cmake  dsch.grc  dsch_1cdblck.grc  dsch_tst.grc  my_lte_cfi_gen.xml  my_lte_cfi_gen.xml~  my_lte_code_block_concatenation.xml  my_lte_code_block_segmentation.xml  my_lte_code_block_segmentation.xml~  my_lte_conv_enc.xml~  my_lte_cp_adder.xml  my_lte_crc_attachment.xml  my_lte_crc_attachment.xml~  my_lte_dci_gen.xml  my_lte_dci_gen.xml~  my_lte_layer_mapper.xml  my_lte_layer_mapper.xml~  my_lte_lte_random_bit_gen.xml  my_lte_lte_random_bit_gen.xml~  my_lte_modulation_mapper.xml  my_lte_modulation_mapper.xml~  my_lte_pdcch_interleaver.xml  my_lte_pdcch_interleaver.xml~  my_lte_pdcch_mux.xml  my_lte_pdcch_mux.xml~  my_lte_phich_alignment.xml  my_lte_phich_alignment.xml~  my_lte_phich_grouping.xml  my_lte_phich_grouping.xml~  (+20 more)
include/my_lte/: CMakeLists.txt  CTestTestfile.cmake  Makefile  api.h  cfi_gen.h  cmake_install.cmake  code_block_concatenation.h  code_block_segmentation.h  conv_enc.h  cp_adder.h  crc_attachment.h  dci_gen.h  layer_mapper.h  lte_random_bit_gen.h  modulation_mapper.h  pdcch_interleaver.h  pdcch_mux.h  phich_alignment.h  phich_grouping.h  phich_orthogonalization.h  precoder.h  rate_match.h  rate_match_conv.h  repeater.h  resource_mapper.h  scrambler.h  scrambler_phich.h  turbo_encoder.h  turbo_encoder.h~
lib/: CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cfi_gen_impl.cc  cfi_gen_impl.h  cmake_install.cmake  code_block_concatenation_impl.cc  code_block_concatenation_impl.h  code_block_segmentation_impl.cc  code_block_segmentation_impl.h  conv_enc_impl.cc  conv_enc_impl.h  cp_adder_impl.cc  cp_adder_impl.h  crc_attachment_impl.cc  crc_attachment_impl.h  dci_gen_impl.cc  dci_gen_impl.h  layer_mapper_impl.cc  layer_mapper_impl.h  lte_random_bit_gen_impl.cc  lte_random_bit_gen_impl.h  modulation_mapper_impl.cc  modulation_mapper_impl.h  pdcch_interleaver_impl.cc  pdcch_interleaver_impl.h  pdcch_mux_impl.cc  pdcch_mux_impl.h  phich_alignment_impl.cc  phich_alignment_impl.h  phich_grouping_impl.cc  phich_grouping_impl.h  phich_orthogonalization_impl.cc  phich_orthogonalization_impl.h  precoder_impl.cc  precoder_impl.h  qa_my_lte.cc  qa_my_lte.h  rate_match_conv_impl.cc  (+17 more)
nbproject/: configurations.xml  project.xml
pdcch_test/: Makefile  main.cpp  pdcch_test  pdcch_test.pro  pdcch_test.pro.user.03463a8  pdcch_test.pro.user.603b969
python/: CMakeLists.txt  CTestTestfile.cmake  Makefile  __init__.py  __init__.pyo  cmake_install.cmake  qa_cfi_gen.py  qa_cfi_gen_test.sh  qa_code_block_concatenation.py  qa_code_block_concatenation_test.sh  qa_code_block_segmentation.py  qa_code_block_segmentation_test.sh  qa_conv_enc.py  qa_conv_enc_test.sh  qa_cp_adder.py  qa_dci_gen.py  (+36 more)
(+16 files in other folders)
